# spacecutter

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: python-package.yml
spacecutter/: __init__.py  callbacks.py  losses.py  models.py
tests/: test_callbacks.py  test_losses.py  test_models.py
