[project]
classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
    'Topic :: Scientific/Engineering :: Information Analysis',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3',
]
keywords = ['ordinal regression', 'pytorch', 'machine learning', 'statistics', 'regression']
homepage= "https://github.com/soof-golan/spacecutter"
repository = "https://github.com/soof-golan/spacecutter"

[tool.poetry]
name = "spacecutter-torch"
version = "1.0.0"
description = "Ordinal regression models in PyTorch"
authors = ["Soof Golan <pypi@soofgolan.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "spacecutter" }]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^2.0"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
